[gd_scene load_steps=9 format=3 uid="uid://btxmfagad05n5"]

[ext_resource type="Texture2D" uid="uid://nh32y87hcke5" path="res://icon.svg" id="1_7f6u3"]
[ext_resource type="Script" uid="uid://k4n0whn5t0m" path="res://scripts/ui/Card.gd" id="1_u8ksl"]
[ext_resource type="PackedScene" uid="uid://daimkj082tvn0" path="res://scenes/ui/general/KeywordContainer.tscn" id="3_6p3td"]
[ext_resource type="Script" uid="uid://c5i0sjwlko88l" path="res://addons/label_font_auto_sizer/rich_label_auto_sizer.gd" id="3_8gkbw"]

[sub_resource type="Animation" id="Animation_qe6gy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 90)]
}

[sub_resource type="Animation" id="Animation_utg8m"]
resource_name = "card_hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 90), Vector2(72, 70)]
}

[sub_resource type="Animation" id="Animation_obl53"]
resource_name = "card_unhover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 60), Vector2(72, 98)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_156sy"]
_data = {
&"RESET": SubResource("Animation_qe6gy"),
&"card_hover": SubResource("Animation_utg8m"),
&"card_unhover": SubResource("Animation_obl53")
}

[node name="Card" type="Control" groups=["cards"]]
custom_minimum_size = Vector2(144, 184)
layout_mode = 3
anchors_preset = 0
offset_right = 144.0
offset_bottom = 184.0
script = ExtResource("1_u8ksl")

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(72, 90)

[node name="KeywordContainer" parent="Pivot" instance=ExtResource("3_6p3td")]
offset_left = 80.0
offset_top = -90.0
offset_right = 320.0
offset_bottom = -53.0

[node name="CardVisual" type="Control" parent="Pivot"]
custom_minimum_size = Vector2(144, 180)
layout_mode = 3
anchors_preset = 0
offset_left = -72.0
offset_top = -90.0
offset_right = 72.0
offset_bottom = 94.0

[node name="CardGlow" type="ColorRect" parent="Pivot/CardVisual"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = -8.0
offset_top = -8.0
offset_right = 152.0
offset_bottom = 192.0
color = Color(0.909804, 0.901961, 0.992157, 0.392157)

[node name="ColorBackground" type="ColorRect" parent="Pivot/CardVisual"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 144.0
offset_bottom = 184.0

[node name="Background" type="ColorRect" parent="Pivot/CardVisual"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 140.0
offset_bottom = 180.0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="CardDescription" type="RichTextLabel" parent="Pivot/CardVisual"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 112.0
offset_right = 136.0
offset_bottom = 184.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "100/100
"
scroll_active = false
script = ExtResource("3_8gkbw")
_max_size = 12
_current_font_size = 12
_editor_defaults_set = true

[node name="EnergySprite" type="ColorRect" parent="Pivot/CardVisual"]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)
metadata/_edit_group_ = true

[node name="EnergyCost" type="Label" parent="Pivot/CardVisual/EnergySprite"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
theme_override_constants/line_spacing = -3
theme_override_font_sizes/font_size = 12
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardTexture" type="TextureRect" parent="Pivot/CardVisual"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 12.0
offset_right = 120.0
offset_bottom = 108.0
texture = ExtResource("1_7f6u3")
expand_mode = 1

[node name="CardName" type="RichTextLabel" parent="Pivot/CardVisual/CardTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -16.0
offset_top = -4.0
offset_right = 112.0
offset_bottom = 12.0
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "Card Name"
scroll_active = false
script = ExtResource("3_8gkbw")
_max_size = 12
_current_font_size = 11
_editor_defaults_set = true

[node name="CardType" type="Label" parent="Pivot/CardVisual"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 95.0
offset_right = 136.0
offset_bottom = 112.0
theme_override_constants/line_spacing = -3
theme_override_font_sizes/font_size = 12
text = "Hit and Run"
horizontal_alignment = 1

[node name="CardButton" type="Button" parent="Pivot"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(144, 184)
offset_left = -72.0
offset_top = -90.0
offset_right = 72.0
offset_bottom = 94.0
button_mask = 3
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_156sy")
}

[node name="KeywordTimer" type="Timer" parent="."]
one_shot = true
